[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/Game.gd" type="Script" id=1]

[node name="Game" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0

[node name="TopContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 320.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="BVolver" type="Button" parent="VBoxContainer/TopContainer"]
margin_right = 39.0
margin_bottom = 20.0
text = "Salir"

[node name="Puntaje" type="Label" parent="VBoxContainer/TopContainer"]
margin_left = 43.0
margin_top = 3.0
margin_right = 320.0
margin_bottom = 17.0
size_flags_horizontal = 3
text = "Puntaje: 000"
align = 2

[node name="NumPregunta" type="Label" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 320.0
margin_bottom = 38.0
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Pregunta 0 de 0"
align = 1
valign = 1

[node name="Pregunta" type="Label" parent="VBoxContainer"]
margin_top = 42.0
margin_right = 320.0
margin_bottom = 319.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Â¿Pregunta?"
align = 1
valign = 1

[node name="Opciones" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 323.0
margin_right = 320.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 40

[node name="Op1" type="Button" parent="VBoxContainer/Opciones"]
margin_right = 320.0
margin_bottom = 39.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Op2" type="Button" parent="VBoxContainer/Opciones"]
margin_top = 79.0
margin_right = 320.0
margin_bottom = 118.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Op3" type="Button" parent="VBoxContainer/Opciones"]
margin_top = 158.0
margin_right = 320.0
margin_bottom = 197.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Op4" type="Button" parent="VBoxContainer/Opciones"]
margin_top = 237.0
margin_right = 320.0
margin_bottom = 277.0
size_flags_horizontal = 3
size_flags_vertical = 3

[connection signal="pressed" from="VBoxContainer/TopContainer/BVolver" to="." method="_on_BVolver_pressed"]
[connection signal="pressed" from="VBoxContainer/Opciones/Op1" to="." method="_on_Option_pressed" binds= [ 0 ]]
[connection signal="pressed" from="VBoxContainer/Opciones/Op2" to="." method="_on_Option_pressed" binds= [ 1 ]]
[connection signal="pressed" from="VBoxContainer/Opciones/Op3" to="." method="_on_Option_pressed" binds= [ 2 ]]
[connection signal="pressed" from="VBoxContainer/Opciones/Op4" to="." method="_on_Option_pressed" binds= [ 3 ]]
